style/timeShift.css
body {
background-color: #000000;
margin: 0 auto;
max-width: 1536px;
font-family: "Pixelify Sans", sans-serif;
display: flex;
flex-direction: column;
align-items: center;
justify-content: center;
color: white;
font-size: larger;
}

.title {
width: 100%;
max-width: 1536;
aspect-ratio: 3 / 2;
background-image: url("../images/time_shift_16.png");
background-repeat: no-repeat;
background-position: center;
background-size: cover;

}

div {
    padding-bottom: 48px;
}

